Create Kitodo - Schema Converter module

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <module>Kitodo-PersistentIdentifier</module>
         <module>Kitodo-Docket</module>
         <module>Kitodo-Command</module>
+        <module>Kitodo-SchemaConverter</module>
         <module>Kitodo-Validation</module>
         <module>Kitodo</module>
     </modules>
