Add Primefaces calendar element to relevant views

--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -55,6 +55,14 @@
             <artifactId>avalon-framework</artifactId>
             <version>4.1.5</version>
         </dependency>
+        <!-- PRIMEFACES -->
+        <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
         <dependency>
             <groupId>cglib</groupId>
