Add configuration editor to project editing page

--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -583,8 +583,16 @@
             <version>2.0.2-beta</version>
             <scope>test</scope>
         </dependency>
-        <!-- PRIMEFACES -->
-        <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>6.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>resources-codemirror</artifactId>
+            <version>6.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
