--- a/Kitodo-Lugh/pom.xml
+++ b/Kitodo-Lugh/pom.xml
@@ -1,29 +1,43 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.kitodo</groupId>
-    <artifactId>kitodo-production</artifactId>
-    <version>3.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>kitodo-lugh</artifactId>
-  <name>Kitodo - Lugh</name>
-  <url>https://github.com/kitodo/kitodo-production</url>
-  <organization>
-  	<name>kitodo.org</name>
-  	<url>http://kitodo.org</url>
-  </organization>
-  <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<scope>test</scope>
-  		<version>4.12</version>
-  	</dependency>
-	<dependency>
-      <groupId>org.apache.jena</groupId>
-      <artifactId>apache-jena-libs</artifactId>
-      <type>pom</type>
-      <version>3.4.0</version>
-    </dependency>
-  </dependencies>
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ *
+ * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+ *
+ * This file is part of the Kitodo project.
+ *
+ * It is licensed under GNU General Public License version 3 or later.
+ *
+ * For the full copyright and license information, please read the
+ * GPL3-License.txt file that was distributed with this source code.
+ *
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.kitodo</groupId>
+        <artifactId>kitodo-production</artifactId>
+        <version>3.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>kitodo-lugh</artifactId>
+    <name>Kitodo - Lugh</name>
+    <url>https://github.com/kitodo/kitodo-production</url>
+    <organization>
+        <name>kitodo.org</name>
+        <url>http://kitodo.org</url>
+    </organization>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>apache-jena-libs</artifactId>
+            <type>pom</type>
+            <version>3.4.0</version>
+        </dependency>
+    </dependencies>
 </project>
