Add a library to run the tests

--- a/Kitodo-Lugh/pom.xml
+++ b/Kitodo-Lugh/pom.xml
@@ -39,5 +39,11 @@
             <type>pom</type>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.25</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
