--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -265,7 +265,20 @@
                     "type": "long"
                 },
                 "project": {
-                    "type": "long"
+                    "properties": {
+                        "id": {
+                            "type": "long"
+                        },
+                        "title": {
+                            "type": "text",
+                            "fields": {
+                                "keyword": {
+                                    "type": "keyword",
+                                    "ignore_above": 256
+                                }
+                            }
+                        }
+                    }
                 },
                 "properties": {
                     "properties": {
@@ -351,8 +364,21 @@
                 "priority": {
                     "type": "long"
                 },
-                "process": {
-                    "type": "long"
+                "processInTask": {
+                    "properties": {
+                        "id": {
+                            "type": "long"
+                        },
+                        "title": {
+                            "type": "text",
+                            "fields": {
+                                "keyword": {
+                                    "type": "keyword",
+                                    "ignore_above": 256
+                                }
+                            }
+                        }
+                    }
                 },
                 "processingStatus": {
                     "type": "long"
