--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -117,13 +117,7 @@
         "project": {
             "properties": {
                 "archived": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "endDate": {
                     "type": "date"
@@ -340,13 +334,7 @@
         "task": {
             "properties": {
                 "batchStep": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "homeDirectory": {
                     "type": "text",
@@ -393,58 +381,22 @@
                     "fielddata": true
                 },
                 "typeAutomatic": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeExportRussian": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeImagesRead": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeImagesWrite": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeImportFileUpload": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeMetadata": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "typeModuleName": {
                     "type": "text",
@@ -581,13 +533,7 @@
         "user": {
             "properties": {
                 "active": {
-                    "type": "text",
-                    "fields": {
-                        "keyword": {
-                            "type": "keyword",
-                            "ignore_above": 256
-                        }
-                    }
+                    "type": "boolean"
                 },
                 "filters": {
                     "properties": {
