--- a/Kitodo-API/pom.xml
+++ b/Kitodo-API/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>2.2.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>7.0.68</version>
+        </dependency>
     </dependencies>
 
 </project>
