created new filter

--- a/Kitodo/src/main/webapp/WEB-INF/web.xml
+++ b/Kitodo/src/main/webapp/WEB-INF/web.xml
@@ -141,6 +141,15 @@
     </filter>
 
     <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>de.sub.goobi.helper.servletfilter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>requestEncoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
         <filter-name>SecurityCheckFilter</filter-name>
         <filter-class>de.sub.goobi.helper.servletfilter.SecurityCheckFilter</filter-class>
     </filter>
@@ -168,6 +177,11 @@
             <param-value>/WEB-INF/reverse-proxy.xml</param-value>
         </init-param>
     </filter>
+
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <filter-mapping>
         <filter-name>extensionsFilter</filter-name>
