--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <maven.compiler.debug>true</maven.compiler.debug>
         <maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
         <maxAllowedViolations>1</maxAllowedViolations>
+        <tomcat.baseversion>7</tomcat.baseversion>
+        <tomcat.version>7.0.81</tomcat.version>
     </properties>
 
     <repositories>
