Adjust test to use scripts from resource folder

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -14,7 +14,7 @@
 MetadatenVerzeichnis=src/test/resources/
 RegelsaetzeVerzeichnis=src/test/resources/
 # Script to create the directory for a new process
-script_createDirMeta=C:/dev/kitodo/scripts/script_createDirMeta.bat
+script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
 # Prefix for image names as regex.
 ImagePrefix=.*
 # -----------------------------------
