--- a/Kitodo-DataManagement/pom.xml
+++ b/Kitodo-DataManagement/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-1.2-api</artifactId>
-            <version>2.6.2</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.portlet</groupId>
