--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -320,13 +320,13 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.6.2</version>
+            <version>${log4j.version}</version>
         </dependency>
         <!-- needed for logging in web context -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
-            <version>2.6.2</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
