--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -271,6 +271,12 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>1.8.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java-->
