added zoom change and rotate image functionality

--- a/Kitodo/src/main/webapp/WEB-INF/web.xml
+++ b/Kitodo/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,11 @@
         <param-value>/WEB-INF/resources</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
+
     <!-- WelcomeFile Filter -->
     <!--
         <filter> <filter-name>WelcomeFile Filter</filter-name>
