--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -296,6 +296,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
             <version>1.5</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -559,6 +560,7 @@
             <groupId>org.xeustechnologies</groupId>
             <artifactId>jtar</artifactId>
             <version>1.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
