--- a/Kitodo-API/pom.xml
+++ b/Kitodo-API/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
-            <version>7.0.68</version>
+            <version>${tomcat.version}</version>
         </dependency>
     </dependencies>
 
