Update mapping to store project.archived

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -269,6 +269,9 @@
                         "id": {
                             "type": "long"
                         },
+                        "archived": {
+                            "type": "boolean"
+                        },
                         "title": {
                             "type": "text",
                             "fields": {
