Add auth variables to kitodo_config.properties

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -526,3 +526,6 @@ elasticsearch.port=9200
 elasticsearch.protocol=http
 elasticsearch.index=kitodo
 elasticsearch.batch=1000
+elasticsearch.useAuthentication=true
+elasticsearch.user=kitodo
+elasticsearch.password=kitodo
