--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -24,4 +24,5 @@ numberOfMetaBackups=2
 moduleFolder=modules/
 elasticsearch.port=9205
 elasticsearch.index=testindex
+elasticsearch.useAuthentication=false
 KonfigurationVerzeichnis=src/test/resources/
