--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -140,6 +140,15 @@
                         }
                     }
                 },
+                "metsRightsOwner": {
+                    "type": "text",
+                    "fields": {
+                        "keyword": {
+                            "type": "keyword",
+                            "ignore_above": 256
+                        }
+                    }
+                },
                 "numberOfPages": {
                     "type": "long"
                 },
