moved css files and replaced tomahawk css loading at head.xhtml

--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -563,6 +563,10 @@
                     <groupId>commons-codec</groupId>
                     <artifactId>commons-codec</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>spring</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
