--- a/Kitodo/src/main/webapp/WEB-INF/web.xml
+++ b/Kitodo/src/main/webapp/WEB-INF/web.xml
@@ -78,6 +78,11 @@
         <param-value>true</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+        <param-value>/WEB-INF/springsecurity.taglib.xml</param-value>
+    </context-param>
+
     <!-- TODO: include the following context-param and change the param value to 'kitodo' once we have a complete Kitodo Primefaces theme -->
     <!--<context-param>-->
         <!--<param-name>primefaces.THEME</param-name>-->
