--- a/Goobi/config/goobi_config.properties
+++ b/Goobi/config/goobi_config.properties
@@ -713,7 +713,7 @@ useWebApi=true
 #activeMQ.results.topic=KitodoProduction.ResultMessages.Topic
 
 # By default, Kitodo instructs the server to keep status messages for a
-# equivalent of 7 days. You can change this value in (milliseconds to) meet
+# equivalent of 7 days. You can change this value (in milliseconds) to meet
 # your needs. 0 will disable the deletion of messages completely. (However,
 # the messages will only available on the Active MQ server if your
 # TopicSubscriber is online with the Active MQ server before the message is
