modified ES mapping, hibernate config

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -538,9 +538,6 @@
         "userGroup": {
             "dynamic": "strict",
             "properties": {
-                "permission": {
-                    "type": "long"
-                },
                 "title": {
                     "type": "text",
                     "fields": {
@@ -586,6 +583,27 @@
                                     "ignore_above": 256
                                 }
                             }
+                        }
+                    }
+                },
+                "authorizations": {
+                    "properties": {
+                        "id": {
+                            "type": "long"
+                        },
+                        "title": {
+                            "type": "text",
+                            "fields": {
+                                "keyword": {
+                                  "type": "keyword",
+                                  "ignore_above": 256
+                                },
+                                "raw": {
+                                  "type": "text",
+                                  "index": false
+                                }
+                            },
+                            "fielddata": true
                         }
                     }
                 }
