Fix invalid HTML
Removes duplicate <tr> tag

--- a/Goobi/config/goobi_config.properties
+++ b/Goobi/config/goobi_config.properties
@@ -165,7 +165,7 @@ ApplicationTitle=http://www.kitodo.org
 
 ApplicationTitleStyle=font-size:17; font-family:verdana; color: white;
 
-ApplicationIndividualHeader=<table><tr><tr><td><a style\="color\:white" target\="_blank" href\="http://www.kitodo.org">Kitodo Community</a></td></tr></table>
+ApplicationIndividualHeader=<table><tr><td><a style\="color\:white" target\="_blank" href\="http://www.kitodo.org">Kitodo Community</a></td></tr></table>
 
 
 # -----------------------------------
