--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -121,7 +121,7 @@ ApplicationHeaderBackground=goobi_meta_verlauf.jpg
 ApplicationHeaderTitle=Kitodo
 ApplicationTitle=http://www.kitodo.org
 ApplicationTitleStyle=font-size:17; font-family:verdana; color: white;
-ApplicationIndividualHeader=<table><tr><tr><td><a style\="color\:white" target\="_blank" href\="http://www.kitodo.org">Kitodo Community</a></td></tr></table>
+ApplicationIndividualHeader=<table><tr><td><a style\="color\:white" target\="_blank" href\="http://www.kitodo.org">Kitodo Community</a></td></tr></table>
 # -----------------------------------
 # Internationalization
 # -----------------------------------
