--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ services:
   - mysql
 
 script:
-  - mvn clean install -Pall-tests,flyway,checkstyle-findbugs,!development && mvn clean install -Pselenium,!development
+  - mvn clean install -B -Pall-tests,flyway,checkstyle-findbugs,!development && mvn clean install -B -Pselenium,!development
 
 # install: true is deactivating the separate install-step, which runs before the script
 install: true
@@ -38,3 +38,4 @@ before_script:
   - export DISPLAY=:99.0
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  - export MAVEN_OPTS=-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
