--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -342,7 +342,7 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>6.5.1</version>
+            <version>6.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.tomahawk</groupId>
@@ -452,7 +452,7 @@
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>transport</artifactId>
-            <version>5.4.3</version>
+            <version>${elasticsearch.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>joda-time</groupId>
