Fix the different usages of namespace mappings

--- a/Kitodo-DataAccess/pom.xml
+++ b/Kitodo-DataAccess/pom.xml
@@ -45,6 +45,11 @@
             <version>2.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>       
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.4-atlassian-1</version>
