--- a/Kitodo-API/pom.xml
+++ b/Kitodo-API/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>tomcat-servlet-api</artifactId>
             <version>${tomcat.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.kitodo</groupId>
+            <artifactId>kitodo-ugh</artifactId>
+            <version>3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
