Move the UGH API into its own module, to break dependency cycle

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         <module>Kitodo-Docket</module>
         <module>Kitodo-Command</module>
         <module>Kitodo-SchemaConverter</module>
+        <module>Kitodo-UGH-API</module>
         <module>Kitodo-Validation</module>
         <module>Kitodo</module>
     </modules>
